# jomini

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: rust.yml
assets/: analysis.R  jomini-benchmarks.csv
bench/: Cargo.toml  README.md
bench/src/: benchmarks.rs  corpus.rs  criterion_main.rs  gungraun_main.rs  lib.rs
bench/src/benchmarks/: binary.rs  date.rs  encoding.rs  json.rs  scalar.rs  text.rs
benches/: jomini_bench.rs  pfars_bench.rs
examples/: debug_text.rs  json.rs  tape_binary.rs  tape_text.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_binary.rs  fuzz_binary_de.rs  fuzz_date.rs  fuzz_envelope.rs  fuzz_parser.rs  fuzz_scalar_text.rs  fuzz_text.rs  fuzz_text_de.rs
integration-tests/: Cargo.toml
integration-tests/benches/: ng_provinces.rs  ng_tokens_gungraun.rs
integration-tests/tests/: eu4_format.rs  hoi4_format.rs  support.rs
jomini_derive/: Cargo.toml  release.toml
jomini_derive/examples/: derive_sample.rs
jomini_derive/src/: lib.rs
jomini_derive/tests/: 01-parse.rs  02-create-deserializer.rs  03-duplicated.rs  04-default.rs  05-default-fn.rs  06-alias.rs  07-multiple.rs  08-duplicated-numbers.rs  09-deserialize-with.rs  10-options.rs  11-last.rs  12-generics.rs  13-generics-constraint.rs  14-arrays.rs  15-const-generics.rs  16-multi-attr.rs  17-borrow.rs  18-collect-with.rs  compiletest.rs  progress.rs
jomini_derive/tests/compile-fail/: borrow_on_reference.rs  borrow_on_reference.stderr  borrow_with_duplicated_and_take_last.rs  borrow_with_duplicated_and_take_last.stderr  duplicated_and_take_last.rs  duplicated_and_take_last.stderr  duplicated_non_vec.rs  duplicated_non_vec.stderr  enum_type.rs  enum_type.stderr  invalid_token_value.rs  invalid_token_value.stderr  tokens.rs  tokens.stderr  unnamed_fields.rs  unnamed_fields.stderr
src/: ascii.rs  binary.rs  buffer.rs  collect.rs  copyless.rs  data.rs  de.rs  document.rs  encoding.rs  envelope.rs  errors.rs  lib.rs  nommer.rs  operator.rs  scalar.rs  scratch.rs  source.rs  stack.rs  text.rs  util.rs  value.rs
src/binary/: de.rs  document.rs  errors.rs  flavor.rs  format.rs  format_de.rs  lexer.rs  mod.rs  ng.rs  parser.rs  reader.rs  resolver.rs  rgb.rs  source.rs  tape.rs  tokens.rs
src/binary/ng/: buf.rs
src/common/: date.rs  mod.rs
src/core/: binary.rs  depth.rs  mod.rs  text.rs
src/de/: binary.rs  mod.rs  tape.rs
src/envelope/: errors.rs  file.rs  header.rs
src/json/: mod.rs
src/text/: de.rs  dom.rs  errors.rs  fnv.rs  lexer.rs  logos_lexer.rs  mod.rs  operator.rs  parser.rs  reader.rs  tape.rs  writer.rs
tests/: binary-core.rs  binary.rs  ck3.rs  de.rs  envelope.rs  meta.rs  ng_formats.rs  tape.rs  text.rs
tests/fixtures/: bin-timeout  campaign_stats.txt  ck3-header.txt  meta.bin.crash  meta.bin.crash2  meta.bin.crash3  meta.bin.crash4  meta.txt  meta.txt.crash  meta.txt.crash2  nested-hidden-obj.txt  savegame.txt  string-array.txt  txt-timeout
tests/fixtures/envelopes/: sav02.txt  text.txt
tests/ng_formats/: ck3.rs  eu4.rs  eu5.rs  hoi4.rs  support.rs
