[package]
name = "jomini"
version = "0.31.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2024"
repository = "https://github.com/rakaly/jomini"
categories = ["parsing"]
description = "Low level, performance oriented parser for save and game files from EU4, CK3, HOI4, Vic3, Imperator, and other PDS titles"
keywords = ["eu4", "ck3", "ironman", "clausewitz"]
exclude = ["/.github", "/assets"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["jomini_derive"]

[dependencies]
itoa = { version = "1.0", optional = true }
jomini_derive = { path = "jomini_derive", version = "^0.4.0", optional = true }
rawzip = { version = "0.4.2", optional = true }
flate2 = { version = "1.1.5", optional = true, default-features = false, features = ["zlib-rs"] }
serde = { version = "1.0.195", optional = true }
serde_json = { version = "1.0.114", optional = true }

[features]
default = ["derive", "faster_writer"]
derive = ["serde/derive", "jomini_derive"]
envelope = ["dep:rawzip", "dep:flate2"]
faster_writer = ["dep:itoa"]
json = ["serde", "serde_json"]
serde = ["dep:serde"]

[dev-dependencies]
attohttpc = { version = "0.29", features = ["tls-vendored"] }
criterion = "0.6.0"
encoding_rs = "0.8"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }
quickcheck = "1"
quickcheck_macros = "1"
rawzip = "0.4.0"
rstest = "0.19.0"
serde_with = "3.8.1"

[[bin]]
name = "json"
required-features = ["json"]

[[bin]]
name = "envelope"
required-features = ["envelope"]

[[bench]]
name = "jomini_bench"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true

