[package]
name = "jomini_derive"
version = "0.1.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/rakaly/jomini"
description = "Serde macros implementation of `#[derive(JominiDeserialize)]`"
keywords = ["serde", "deserialization"]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
serde = "1"
serde_json = "1"

[dependencies]
syn = "1"
quote = "1"
