[package]
name = "jomini_derive"
version = "0.3.0"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/rakaly/jomini"
description = "Serde macros implementation of `#[derive(JominiDeserialize)]`"
keywords = ["serde", "deserialization"]

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.104", features = ["diff"] }
serde = "1.0.195"
serde_json = "1.0.114"
smallvec = { version = "1.13", features = ["serde", "union"] }

[dependencies]
syn = { version = "2.0.50", features = ["derive"] }
quote = "1.0.34"
